--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <meta name="description" content="Watch movies online on moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movekingmovies online." />
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 <meta name="keywords" content="moveking,uwatchmovies,movekingmovies,moveking tv,free movies,watch movies online,full movies online" />
-<link rel="canonical" href="https://moveking.netlify.app/" />
+<link rel="canonical" href="https://moveking.netlify.app/index.html" />
 <link rel="next" href="https://moveking.netlify.app/page/2/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="Moveking | Watch Movies and TV-Series Online Free" />
