--- a/index.html
+++ b/index.html
@@ -23,15 +23,24 @@
 <meta name="yandex-verification" content="cce2d9e2b3473ad4" />
 
 
-<link rel="alternate" hreflang="x-default" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="en-us" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="en-gb" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="ar-ae" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="de-de" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="en-ca" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="en-au" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="fr-fr" href="https://moveking.netlify.app/"/>
-<link rel="alternate" hreflang="sv-se" href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-us" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-gb" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-ca" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-au" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-se" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-fr" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-dk" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="en-no" 
+href="https://moveking.netlify.app/"/>
+<link rel="alternate" hreflang="x-default" 
+href="https://moveking.netlify.app/"/>
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
