--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@ href="https://moveking.netlify.app/"/>
 <link rel="canonical" href="https://moveking.netlify.app/">
 <link rel="next" href="https://moveking.netlify.app/page/2/" />
 <meta property="og:locale" content="en_US" />
-<meta property="og:site_name" content="moveking | Watch Movies and TV-Series Online Free" />
+<meta property="og:site_name" content="Moveking | Watch Movies and TV-Series Online Free" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="moveking | Watch Movies and TV-Series Online Free" />
+<meta property="og:title" content="Moveking | Watch Movies and TV-Series Online Free" />
 <meta property="og:description" content="Watch movies online on moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta property="og:url" content="https://moveking.netlify.app/" />
 <meta property="og:image" content="https://moveking.netlify.app/og_image.jpg" />
 <meta property="og:image:secure_url" content="https://moveking.netlify.app/og_image.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="moveking | Watch Movies and TV-Series Online Free" />
+<meta name="twitter:title" content="Moveking | Watch Movies and TV-Series Online Free" />
 <meta name="twitter:description" content="Watch movies online on moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta name="twitter:image" content="https://moveking.netlify.app/og_image.jpg" />
 
