--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ transform:scale(1.5);
     <input type="submit" class="submit" name="submit" id="searchsubmit" value="Search" /></form>
     </div>
         <div class="sharethis-sticky-share-buttons"></div>
-    <h1 class="top-search" style="font-size: 20px; font-weight: bold; text-align: center; color: #ddd;">moveking - Watch Movies and TV Series Online Free</h1>
+    <h1 class="top-search" style="font-size: 20px; font-weight: bold; text-align: center; color: #ddd;">Moveking - Watch Movies and TV Series Online Free</h1>
     <div id="primary" class="content-area">
     <div id="content" class="site-content" role="main">
         <article id="post-217855" class="post-217855 post type-post status-publish format-standard has-post-thumbnail hentry category-comedy category-hollywood tag-557">
