--- a/index.html
+++ b/index.html
@@ -3082,5 +3082,8 @@ transform:scale(1.5);
             }
         });
     </script>
+    <a title="Google Analytics Alternative" href="https://clicky.com/101362180"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+    <script async src="//static.getclicky.com/101362180.js"></script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101362180ns.gif" /></p></noscript>
 </body>
 </html>
