--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4903040,document.body||document.documentElement)</script>
 
 <title>moveking | Watch Movies and TV-Series Online Free</title>
-<meta name="description" content="Watch movies online on moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
+<meta name="description" content="Watch movies online on Moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 <meta name="keywords" content="moveking,uwatch4movies,movies,moveking tv,free movies,watch movies online,full movies online,hot movies,adult movies,download free movies" />
 <link rel="canonical" href="https://moveking.netlify.app/">
 <link rel="next" href="https://moveking.netlify.app/page/2/" />
 <meta property="og:locale" content="en_US" />
-<meta property="og:site_name" content="moveking | Watch Movies and TV-Series Online Free" />
+<meta property="og:site_name" content="Moveking | Watch Movies and TV-Series Online Free" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="moveking | Watch Movies and TV-Series Online Free" />
-<meta property="og:description" content="Watch movies online on moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
+<meta property="og:title" content="Moveking | Watch Movies and TV-Series Online Free" />
+<meta property="og:description" content="Watch movies online on Moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta property="og:url" content="https://moveking.netlify.app/" />
 <meta property="og:image" content="https://moveking.netlify.app/og_image.jpg" />
 <meta property="og:image:secure_url" content="https://moveking.netlify.app/og_image.jpg" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="moveking | Watch Movies and TV-Series Online Free" />
-<meta name="twitter:description" content="Watch movies online on moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
+<meta name="twitter:title" content="Moveking | Watch Movies and TV-Series Online Free" />
+<meta name="twitter:description" content="Watch movies online on Moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta name="twitter:image" content="https://moveking.netlify.app/og_image.jpg" />
 
 <script type="application/ld+json" class="aioseo-schema">
