--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <script type="f534656b19c1ddcd56eb623b-text/javascript">document.documentElement.className = document.documentElement.className.replace('no-js','');</script>
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4903040,document.body||document.documentElement)</script>
 
-<title>moveking | Watch Movies and TV-Series Online Free</title>
+<title>Moveking | Watch Movies and TV-Series Online Free</title>
 <meta name="description" content="Watch movies online on Moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 <meta name="keywords" content="moveking,uwatch4movies,movies,moveking tv,free movies,watch movies online,full movies online,hot movies,adult movies,download free movies" />
