--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <title>Moveking | Watch Movies and TV-Series Online Free</title>
 <meta name="description" content="Watch movies online on Moveking, Download your favorite movies and tv-series in HD without registration. Watch the latest movies online." />
 <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-<meta name="keywords" content="moveking,free movies online,uwatchfreemovies,moveking tv,free movies,watch movies online,full movies online" />
+<meta name="keywords" content="moveking,free movies online,movekingfreemovies,moveking tv,free movies,watch movies online,full movies online" />
 <link rel="canonical" href="https://moveking.netlify.app/">
 <link rel="next" href="https://moveking.netlify.app/page/2/" />
 <meta property="og:locale" content="en_US" />
